Added smooth movement for camera orientation, test bones IK and obj dragging

--- a/www/index.html
+++ b/www/index.html
@@ -21,108 +21,6 @@
       }
     </script>
 
-    <script type="module">
-      import WebGL from './js/three-webgl.min.js';
-      import * as THREE from 'three';
-      import { OutlineEffect } from './js/three-outlineeffect.min.js';
-      import { DRACOLoader } from './js/three-dracoloader.min.js';
-      import { GLTFLoader } from './js/three-gltfloader.min.js';
-      import { DeviceOrientationController } from './js/three-deviceorientation.js';
-      import { VRButton } from './js/three-vrbutton.min.js';
-
-      if( !WebGL.isWebGLAvailable() ) {
-        // TODO: Implement simple welcome screen if webgl is not supported
-        const warning = WebGL.getWebGLErrorMessage();
-        document.body.appendChild(warning);
-      } else {
-        const scene = new THREE.Scene();
-
-        // Default camera will be replaced by the active one from the gltf loader
-        var camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set( 0, 250, 0 );
-        camera.lookAt( 0, 0, 0 );
-
-        const renderer = new THREE.WebGLRenderer({ antialias: true });
-        renderer.setPixelRatio(window.devicePixelRatio);
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.xr.enabled = true;
-        document.body.appendChild(renderer.domElement);
-
-        // Adding VRButton to indicate VR support
-        document.body.appendChild(VRButton.createButton(renderer));
-
-        // Slightly rotate camera on mouse move
-        const controls = new DeviceOrientationController(camera, renderer.domElement);
-
-        // Load the model
-        const dracoLoader = new DRACOLoader();
-        dracoLoader.setDecoderPath('./js/draco/');
-        const loader = new GLTFLoader();
-        loader.setDRACOLoader(dracoLoader);
-        loader.load('./model.glb', function(gltf) {
-          gltf.scene.traverse(toonMaterial);
-          scene.add(gltf.scene);
-          if( gltf.cameras ) {
-            camera = gltf.cameras[0]
-            onWindowResize();
-
-            // Limit the camera rotation
-            camera.quaternion._onChangeCallbackPrev = camera.quaternion._onChangeCallback;
-            camera.quaternion._onChange(function(){
-              this._onChangeCallbackPrev();
-            });
-
-            // Set the camera to control
-            controls.object = camera;
-            controls.connect();
-          }
-        }, function (xhr) {
-          console.log(( xhr.loaded / xhr.total * 100 ) + '% loaded');
-        }, function(error) {
-          console.error(error);
-        });
-
-        scene.background = new THREE.Color( 0xffffff );
-
-        window.addEventListener('resize', onWindowResize);
-
-        // Cell shading outline effect with VR support
-        const outline_effect = new OutlineEffect(renderer);
-        let renderingOutline = false;
-
-        scene.onAfterRender = function () {
-          if( renderingOutline ) return;
-          renderingOutline = true;
-          outline_effect.renderOutline(scene, camera);
-          renderingOutline = false;
-        };
-
-        renderer.setAnimationLoop(render);
-
-        function toonMaterial(obj) {
-          // Replaces material to toon shading saving the color of original material
-          if( obj.material ) {
-            obj.material = new THREE.MeshToonMaterial({
-              color: obj.material.color,
-              side: THREE.DoubleSide,
-            });
-          }
-        }
-
-        function onWindowResize() {
-          camera.aspect = window.innerWidth / window.innerHeight;
-          camera.updateProjectionMatrix();
-          renderer.setSize(window.innerWidth, window.innerHeight);
-        };
-
-        function render() {
-          //requestAnimationFrame(animate);
-
-          controls.update();
-
-          renderer.render(scene, camera);
-        };
-      }
-    </script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
